@@ -175,7 +175,9 @@ CDataFrameAnalysisInstrumentation::TWriter* CDataFrameAnalysisInstrumentation::w
 }
 
 void CDataFrameAnalysisInstrumentation::writeMemoryAndAnalysisStats() {
-    std::int64_t timestamp{core::CTimeUtils::toEpochMs(core::CTimeUtils::now())};
+    std::int64_t timestamp{std::chrono::duration_cast<std::chrono::milliseconds>(
+                               std::chrono::system_clock::now().time_since_epoch())
+                               .count()};
     if (m_Writer != nullptr) {
         m_Writer->StartObject();
         this->writeMemory(timestamp);
